--- a/WebContent/Public/RegistrarUsuario.html
+++ b/WebContent/Public/RegistrarUsuario.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-    <title>Registrar Usuario</title>
+    <title>Registrar Paciente</title>
 
 </head>
 <body style="background-color: #575757;">
@@ -24,24 +24,18 @@
 			<div id="registro" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3
                     col-12">
                     <h2 class="text-center" style="color: white; font-size: 40px">Formulario de Registro de Usuario</h2>
-                    <form  class="form-group" action="http://localhost:8080/PracticaServJSPyJDBC/RegistrarUsuario" method="GET">
+                    <form  class="form-group" action="http://localhost:8080/ConsultorioMedico/RegistrarPacienteJor" method="get">
                     	<div class="form-group">
-                    		<label style="color: white; font-size: 20px; padding-top: 15px" for="nombre">Nombre</label>
-                            <input style="font-size: 20px" class="form-control" id="nombre" name="nombre" class="form-control" placeholder="Nombre...">
-                            <label style="color: white; font-size: 20px; padding-top: 8px" for="apellido">Apellido</label>
-                            <input style="font-size: 20px" class="form-control" id="apellido" name="apellido" class="form-control" placeholder="Apellido...">
+                    		<label style="color: white; font-size: 20px; padding-top: 15px" for="nombres">Nombres</label>
+                            <input style="font-size: 20px" class="form-control" id="nombres" name="nombres" class="form-control" placeholder="Nombres...">
+                            <label style="color: white; font-size: 20px; padding-top: 8px" for="apellidos">Apellidos</label>
+                            <input style="font-size: 20px" class="form-control" id="apellidos" name="apellidos" class="form-control" placeholder="Apellidos...">
                             <label style="color: white; font-size: 20px; padding-top: 8px" for="cedula">Cedula</label>
                             <input style="font-size: 20px" class="form-control" id="cedula" name="cedula" class="form-control" placeholder="Cedula...">
-                            <label style="color: white; font-size: 20px; padding-top: 8px" for="cedula">Empresa</label>
-                            <select  style="font-size: 20px" class="form-control" id="exampleFormControlSelect1" name="empresa">
-						        <option style="font-size: 20px" >Papelesa</option>
-								<option style="font-size: 20px">Importsum</option>
-								<option style="font-size: 20px">ONERON</option>
-							</select>
                             <label style="color: white; font-size: 20px; padding-top: 8px" for="correo">Correo Electrónico</label>
                             <input style="font-size: 20px" class="form-control" id="correo" name="correo" class="form-control" placeholder="Correo...">
-                            <label style="color: white; font-size: 20px; padding-top: 8px" pxfor="contrasena">Contraseña</label>
-                            <input style="font-size: 20px" class="form-control" id="contrasena" name="contrasena" type="password" class="form-control" placeholder="Contraseña...">
+                            <label style="color: white; font-size: 20px; padding-top: 8px" pxfor="contrasena">Telefono</label>
+                            <input style="font-size: 20px" class="form-control" id="telefono" name="telefono" class="form-control" placeholder="Telefono...">
                     	</div>
                     	<div class="form-group">
     						<INPUT style="font-size: 20px" type="submit" class="btn-info" value="Enviar"> <INPUT style="font-size: 20px" type="reset" class="btn-info" value="Resetear">
