--- a/WebContent/Administrador/RegistrarSecretaria.html
+++ b/WebContent/Administrador/RegistrarSecretaria.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-    <title>Registrar Medico</title>
+    <title>Registrar Registrar</title>
 
 </head>
 <body style="background-color: #575757;">
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div id="registro" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3
                     col-12">
-                    <h2 class="text-center" style="color: white; font-size: 40px">Formulario de Registro de Medicos</h2>
+                    <h2 class="text-center" style="color: white; font-size: 40px">Formulario de Registro de Secretarias</h2>
                     <form  class="form-group" action="http://localhost:8080/ConsultorioMedico/RegistrarPacienteJor" method="get">
                     	<div class="form-group">
                     		<label style="color: white; font-size: 20px; padding-top: 15px" for="nombres">Nombres</label>
