--- a/WebContent/Public/RegistrarUsuario.html
+++ b/WebContent/Public/RegistrarUsuario.html
@@ -34,6 +34,8 @@
                             <input style="font-size: 20px" class="form-control" id="cedula" name="cedula" class="form-control" placeholder="Cedula...">
                             <label style="color: white; font-size: 20px; padding-top: 8px" for="correo">Correo Electrónico</label>
                             <input style="font-size: 20px" class="form-control" id="correo" name="correo" class="form-control" placeholder="Correo...">
+                            <label style="color: white; font-size: 20px; padding-top: 8px" for="contrasena">Contraseña</label>
+                            <input style="font-size: 20px" class="form-control" id="contrasena" name="contrasena" class="form-control" placeholder="Contraseña...">
                             <label style="color: white; font-size: 20px; padding-top: 8px" pxfor="contrasena">Telefono</label>
                             <input style="font-size: 20px" class="form-control" id="telefono" name="telefono" class="form-control" placeholder="Telefono...">
                     	</div>
