--- a/WebContent/Administrador/RegistrarSecretaria.html
+++ b/WebContent/Administrador/RegistrarSecretaria.html
@@ -24,7 +24,7 @@
 			<div id="registro" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3
                     col-12">
                     <h2 class="text-center" style="color: white; font-size: 40px">Formulario de Registro de Secretarias</h2>
-                    <form  class="form-group" action="http://localhost:8080/ConsultorioMedico/RegistrarPacienteJor" method="get">
+                    <form  class="form-group" action="http://localhost:8080/ConsultorioMedico/RegistrarSecretaria" method="get">
                     	<div class="form-group">
                     		<label style="color: white; font-size: 20px; padding-top: 15px" for="nombres">Nombres</label>
                             <input style="font-size: 20px" class="form-control" id="nombres" name="nombres" class="form-control" placeholder="Nombres...">
@@ -34,10 +34,10 @@
                             <input style="font-size: 20px" class="form-control" id="cedula" name="cedula" class="form-control" placeholder="Cedula...">
                             <label style="color: white; font-size: 20px; padding-top: 8px" for="correo">Correo Electrónico</label>
                             <input style="font-size: 20px" class="form-control" id="correo" name="correo" class="form-control" placeholder="Correo...">
+                            <label style="color: white; font-size: 20px; padding-top: 8px" for="contraseña">Contraseña</label>
+                            <input style="font-size: 20px" class="form-control" id="contrasena" name="contrasena" class="form-control" placeholder="Contraseña...">
                             <label style="color: white; font-size: 20px; padding-top: 8px" for="telefono">Telefono</label>
                             <input style="font-size: 20px" class="form-control" id="telefono" name="telefono" class="form-control" placeholder="Telefono...">
-                            <label style="color: white; font-size: 20px; padding-top: 8px" for="especialidad">Especialidad</label>
-                            <input style="font-size: 20px" class="form-control" id="especialidad" name="especialidad" class="form-control" placeholder="Especialidad...">
                     	</div>
                     	<div class="form-group">
     						<INPUT style="font-size: 20px" type="submit" class="btn-info" value="Enviar"> <INPUT style="font-size: 20px" type="reset" class="btn-info" value="Resetear">
